# typer

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-docs.yml  latest-changes.yml  preview-docs.yml  smokeshow.yml  test.yml
docs/: index.md  release-notes.md  typer-cli.md
docs/tutorial/: first-steps.md  index.md  package.md  testing.md
docs/tutorial/arguments/: help.md
docs/tutorial/commands/: callback.md  index.md
docs/tutorial/parameter-types/: datetime.md  index.md
docs/tutorial/subcommands/: name-and-help.md
scripts/: format-imports.sh  format.sh  lint.sh  test.sh
tests/: test_click_types.py  test_help_docstring.py  test_others.py
tests/test_cloup/: test_option_groups_decorators.py  test_option_groups_errors.py
tests/test_completion/: test_completion.py  test_completion_complete.py  test_completion_complete_no_help.py  test_completion_install.py  test_completion_show.py
tests/test_tutorial/test_arguments/test_help/: test_tutorial005.py
tests/test_tutorial/test_commands/test_help/: test_tutorial001.py
tests/test_tutorial/test_multiple_values/test_arguments_with_multiple_values/: test_tutorial002.py
tests/test_tutorial/test_options/test_prompt/: test_tutorial003.py
typer/: __init__.py  core.py  main.py  models.py  params.py
typer_cloup/: __init__.py  _completion_click8.py  _completion_shared.py  core.py  main.py  models.py  params.py
